--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,49 @@
-%h1 Welcome#index
-%p Find me in app/views/welcome/index.html.haml
+.container
+  .row
+    .col-lg-8.col-md-10.mx-auto
+      .post-preview
+        %a{:href => "post.html"}
+          %h2.post-title
+            Man must explore, and this is exploration at its greatest
+          %h3.post-subtitle
+            Problems look mighty small from 150 miles up
+        %p.post-meta
+          Posted by
+          %a{:href => "#"} Start Bootstrap
+          on September 24, 2018
+      %hr/
+      .post-preview
+        %a{:href => "post.html"}
+          %h2.post-title
+            I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
+        %p.post-meta
+          Posted by
+          %a{:href => "#"} Start Bootstrap
+          on September 18, 2018
+      %hr/
+      .post-preview
+        %a{:href => "post.html"}
+          %h2.post-title
+            Science has not yet mastered prophecy
+          %h3.post-subtitle
+            We predict too much for the next year and yet far too little for the next ten.
+        %p.post-meta
+          Posted by
+          %a{:href => "#"} Start Bootstrap
+          on August 24, 2018
+      %hr/
+      .post-preview
+        %a{:href => "post.html"}
+          %h2.post-title
+            Failure is not an option
+          %h3.post-subtitle
+            Many say exploration is part of our destiny, but it’s actually our duty to future generations.
+        %p.post-meta
+          Posted by
+          %a{:href => "#"} Start Bootstrap
+          on July 8, 2018
+      %hr/
+      / Pager
+      .clearfix
+        %a.btn.btn-info.float-right{:href => "#"} Older Posts →
+%hr/
