--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,3 +1,12 @@
+/ Page Header
+%header.masthead{:style => "background-image: url('/template_assets/img/home-bg.jpg')"}
+  .overlay
+  .container
+    .row
+      .col-lg-8.col-md-10.mx-auto
+        .site-heading
+          %h1 Clean Blog
+          %span.subheading A Blog Theme by Start Bootstrap
 .container
   .row
     .col-lg-8.col-md-10.mx-auto
