--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,29 +1,26 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true, autocomplete: "name"
-  .field
-    = f.label :image
-    %br/
-    = f.file_field :image, autofocus: true
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.fake_header
+.container
+  %h2.mt-5.mb-3 さあ、新たな世界へ出かけよう！
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = devise_error_messages!
+    .form-group
+      = f.label :name, class: "col-sm-3 control-label"
+      = f.text_field :name, class: "form-control", placeholder: '', require: true
+    .form-group
+      = f.label :image, class: "col-sm-3 control-label"
+      = f.file_field :image, class: "form-control", placeholder: '', require: true
+    .form-group
+      = f.label :email, class: "col-sm-3 control-label"
+      = f.email_field :email, class: "form-control", placeholder: '', require: true
+    .form-group
+      = f.label :password, class: "col-sm-3 control-label"
+      = f.password_field :password, class: "form-control", placeholder: '', require: true
+    .form-group
+      = f.label :password_confirmation, class: "col-sm-3 control-label"
+      = f.password_field :password_confirmation, class: "form-control", placeholder: '', require: true
+    .form-group
+      = f.label :my_profile, class: "col-sm-3 control-label"
+      = f.text_area :my_profile, class: "form-control", placeholder: '', require: true, rows: '5'
+
+    .form-group
+      = f.submit "新規登録する", class: "btn btn-info"
