--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,6 +13,8 @@
           -#   =link_to 'マイページ', user_path(current_user.id)
           -# %li.nav-item
           -#   =link_to '投稿', new_article_path(current_user.id)
+          %li.nav-item
+            =link_to 'ログアウト', destroy_user_session_path, method: :delete
       -else
         %ul.navbar-nav.ml-auto
           %li.nav-item
