--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-.fake_header
+.fake-header
 .container
   %h2.mt-5.mb-3 さあ、新たな世界へ出かけよう！
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
