--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -9,8 +9,8 @@
         %ul.navbar-nav.ml-auto
           %li.nav-item
             =link_to 'home', root_path
-          -# %li.nav-item
-          -#   =link_to 'マイページ', user_path(current_user.id)
+          %li.nav-item
+            =link_to 'マイページ', user_path(current_user.id)
           -# %li.nav-item
           -#   =link_to '投稿する', new_article_path
           %li.nav-item
